[gd_scene load_steps=9 format=2]

[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 12
outline_color = Color( 0.0196078, 0.0431373, 0.211765, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 96.0
color = Color( 0, 0, 0, 0.517647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = 32.0
margin_right = -59.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_txt" type="Label" parent="Score"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -69.0
margin_top = -32.0
margin_right = 8.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 5 )
text = "Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highscore" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -416.0
margin_top = 32.0
margin_right = -379.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highscore_txt" type="Label" parent="highscore"]
margin_left = -32.0
margin_top = -32.0
margin_right = 107.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 5 )
text = "High score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -152.0
margin_right = 208.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Dodge the
creeps"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -240.0
margin_right = 104.0
margin_bottom = -172.0
custom_fonts/font = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="credits" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -144.0
margin_top = 328.0
margin_right = -16.0
margin_bottom = 344.0
custom_fonts/font = SubResource( 4 )
text = "Created by: Rikith"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="."]
margin_left = 32.0
margin_top = 656.0
margin_right = 142.0
margin_bottom = 722.0
custom_fonts/font = SubResource( 6 )
text = "Controls
- W,A,S,D
- Arrow Keys"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
